--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,13 @@ body{
 	
 }
 
+nav {
+	margin-bottom:0px!Important;
+}
 
+li{
+	margin-right: 5px;
+}
 .inputField {
 
 	height:400px;
@@ -47,7 +53,7 @@ body{
 } */
 
 #jumbotron1{
-	margin-top:10px;
+	/* margin-top:10px; */
 	margin-bottom:15px;
 	text-align:center;
 	background-image: url("jumbotron.jpeg");
