--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,52 +5,27 @@ body{
 
 }
 .container-fluid{
-	width:99%;
+	width:100%;
 	height:100%;
-	margin:auto;
-}
-.fas {
-	color:rgb(235, 86, 86);
-	font-size:24px;
-	
+	margin:0;
 }
 
 
-.inputField {
-
-	height:400px;
-	padding:1%;
-	background-image: url(../images/inputimg.jpg);
-	background-size: 100%;
-	text-align: center;
-}
-.card{
-	margin-left:19%;
-	margin: 2px auto;
+nav {
+	margin-bottom:0px!Important;
 }
 
-/* .col-sm-4{
-	border: solid  rgb(239, 239, 240) 8px;
-	border-right: solid  rgb(239, 239, 240) 20px;
-	border-left: solid rgb(239, 239, 240) 20px;
-	text-align: center;
-	
-	
-}  
+li{
+	margin-right: 5px;
+}
 
-.dogReturn{
 
-	height:400px;
-	background-image: url(inputimg.jpg);
-	background-size: 100%;
-
-} */
 
 #jumbotron1{
-	margin-top:10px;
+	/* margin-top:10px; */
 	margin-bottom:15px;
 	text-align:center;
-	background-image: url(../images/jumbotron.jpeg);
+	background-image: url("jumbotron.jpeg");
 	background-size:100%;
 	background-position:5%;
 	opacity: .95;
@@ -62,19 +37,27 @@ body{
 
 
 #map {
-	height:400px;
+	height:500px;
 	width:100%;
-	margin-left:5px;
+	
 	border: solid rgb(239, 239, 240) 10px;
 	size:100%;
 }
 
-#favoritesBtn {
-	margin-right:5px;
+.forms{
+	text-align:center;
+	font-size:18px;
+	
+	
 }
 
-#submitBtn {
-	margin-left:5px;
+footer {
+	color:white;
+	text-align:center;
+	line-height:1.5;
+	padding-top:5px;
+	font-size:16px;
+	border-top: solid 2px rgb(152, 165, 160);
 }
 
 
