--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ li{
 	/* margin-top:10px; */
 	margin-bottom:15px;
 	text-align:center;
-	background-image: url("jumbotron.jpeg");
+	background-image: url("../images/jumbotron.jpeg");
 	background-size:100%;
 	background-position:5%;
 	opacity: .95;
