--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
-
+#logo {
+	max-width: 400px;
+}
 body{
 	font-family: 'Ubuntu', sans-serif;
 	background-color: rgb(239, 239, 240);
@@ -12,14 +14,20 @@ body{
 
 nav {
 	margin-bottom:0px!Important;
+	height: 100%;
 }
 
+.navbar-brand {
+	padding: 3px 0px 0px 0px;
+}
 
 li{
 	margin-right: 5px;
 }
 
-
+h2 {
+	color: #f1f1f1;
+}
 
 #jumbotron1{
 	/* margin-top:10px; */
@@ -32,6 +40,8 @@ li{
 	height:275px;
 	color:black;
 	font-weight:bolder;
+	height: 100%;
+	padding: 0px;
 	
 }
 
