--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,11 +15,6 @@ nav {
 }
 
 
-nav {
-	margin-bottom:0px!Important;
-
-}
-
 li{
 	margin-right: 5px;
 }
@@ -55,6 +50,9 @@ li{
 	
 	
 }
+.resourcePage{
+	color:rgb(255, 251, 236);
+}
 
 footer {
 	color:white;
@@ -66,3 +64,20 @@ footer {
 }
 
 
+#faq {
+	text-align: center;
+}
+
+.footer {
+	color: white;
+	text-align:center;
+	line-height:1.5;
+	padding-top:5px;
+	font-size:16px;
+	border-top: solid 2px rgb(152, 165, 160);
+
+}
+
+.faqs {
+	color:rgb(255, 251, 236);
+}
