added zipcode error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,3 +121,14 @@ a:hover {
 	padding: 120px;
 	margin: 20px 0px 20px 0px;
 }
+
+/* .back {
+	background-image: url("../images/subtle_white_feathers.png");
+	width:100%;
+} */
+#zip-error{
+	color: red;
+	font-weight: bold;
+	font-size: 12px;
+	display:none;
+}
